--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
+    "clsx": "^1.1.1",
     "jss": "^10.6.0",
     "jss-global": "^3.0.0",
     "jss-plugin-camel-case": "^10.6.0",
+    "jss-plugin-nested": "^10.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-jss": "^10.6.0",
@@ -50,6 +52,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "copy-webpack-plugin": "6",
+    "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.1.8",
     "react-scripts": "^4.0.3"
   }
